# simplefb

./: Cargo.toml  README.md
src/: buffer.rs  color.rs  config.rs  console.rs  lib.rs  picture.rs
